[gd_scene load_steps=8 format=2]

[ext_resource path="res://Data.gd" type="Script" id=1]
[ext_resource path="res://UIstyle.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/alles_kohl.ogg" type="AudioStream" id=3]
[ext_resource path="res://new_theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/button_off.png" type="Texture" id=6]
[ext_resource path="res://Assets/button_on.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.2, 0.2, 0.2, 1 )

[node name="Data" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBox" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CanvasLayer/VBox"]
margin_right = 30.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="CanvasLayer/VBox"]
margin_top = 32.0
margin_right = 30.0
margin_bottom = 60.0
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox2" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 4 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="CanvasLayer/VBox2"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CanvasLayer/VBox2"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 80.0
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crashes" type="Label" parent="CanvasLayer/VBox2"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 112.0
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/VBox2"]
margin_top = 116.0
margin_right = 300.0
margin_bottom = 120.0

[node name="StartOver" type="Label" parent="CanvasLayer/VBox2"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 152.0
theme = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Press [Esc] to start over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="CanvasLayer/HBox"]
margin_top = 5.0
margin_right = 262.0
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Music: das timbo - \"alles kohl\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="CheckButton" parent="CanvasLayer/HBox"]
margin_left = 266.0
margin_right = 338.0
margin_bottom = 38.0
focus_mode = 0
custom_icons/off = ExtResource( 6 )
custom_icons/on = ExtResource( 7 )
pressed = true
enabled_focus_mode = 0
align = 1

[node name="MessageSkip" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Press [ESC] to skip the intro"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageCheckpoint" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SkipTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="toggled" from="CanvasLayer/HBox/button" to="." method="_on_button_toggled"]
[connection signal="timeout" from="SkipTimer" to="." method="_on_SkipTimer_timeout"]
